--- a/css/newcss.css
+++ b/css/newcss.css
@@ -1,3 +1,40 @@
+body {
+    padding: 0;
+    margin: 0;
+	background-color: #e1ebec;
+}
+
+html, body, #map {
+    height: 100%;
+}
+
 #map { 
-height: 480px; 
-border: 1px solid #666 }
+	height: 480px; 
+	border: 1px solid #666; }
+	
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.container {
+	padding: 5px;
+}
+
+.info {
+    padding: 12px 12px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+
+#popupBox {
+	width: 100%;
+	height: 100%;
+}
